# email-auth-rs

./: .gitignore  .meta-tracking.md  CLAUDE.md  Cargo.toml  IMPL.md  README.md  REFERENCE.md  autoresearch.checks.sh  autoresearch.jsonl  autoresearch.md  autoresearch.sh
.forge/: checkboxes.md  lanes.yaml  review-lane-1.md  review-lane-10.md  review-lane-11.md  review-lane-12.md  review-lane-13.md  review-lane-14.md  review-lane-15.md  review-lane-16.md  review-lane-17.md  review-lane-2.md  review-lane-3.md  review-lane-4.md  review-lane-5.md  review-lane-6.md  review-lane-7.md  review-lane-8.md  review-lane-9.md  state.yaml
.forge/learnings/: cycle-1-lane-1.md  cycle-1-lane-10.md  cycle-1-lane-11.md  cycle-1-lane-12.md  cycle-1-lane-13.md  cycle-1-lane-14.md  cycle-1-lane-15.md  cycle-1-lane-16.md  cycle-1-lane-17.md  cycle-1-lane-2.md  cycle-1-lane-3.md  cycle-1-lane-4.md  cycle-1-lane-5.md  cycle-1-lane-6.md  cycle-1-lane-7.md  cycle-1-lane-8.md  cycle-1-lane-9.md
impl/v1/: 00-INDEX.md  02-DKIM-RFC6376.md  IMPL.md
impl/v2/: 01-SPF-RFC7208.md
specs/: 01-SPF-RFC7208.md  02-DKIM-RFC6376.md  03-DMARC-RFC7489.md  04-ARC-RFC8617.md  05-BIMI.md  REFLECTION-v2.yaml  draft-brand-indicators-for-message-identification.txt
specs/ground-truth/: README.md  dns-fixtures.json  ed25519.pem  ed25519.pub.b64  rsa1024.pem  rsa1024.pub.b64  rsa2048.pem  rsa2048.pub.b64
specs/milestones/: M1-common.md  M10-combined.md  M2-spf-parsing.md  M3-spf-eval.md  M4-dkim-parsing.md  M5-dkim-canon.md  M6-dkim-verify.md  M7-dkim-signing.md  M8-dmarc-parsing.md  M9-dmarc-eval.md
src/: auth.rs  lib.rs
src/arc/: mod.rs  parse.rs  parser.rs  seal.rs  types.rs  validate.rs
src/bimi/: discover.rs  discovery.rs  mod.rs  parser.rs  record.rs  svg.rs  types.rs  vmc.rs
src/common/: cidr.rs  dns.rs  domain.rs  mod.rs  psl.rs
src/dkim/: canon.rs  crypto.rs  hash.rs  key.rs  mod.rs  parser.rs  sign.rs  signature.rs  types.rs  verify.rs
src/dmarc/: alignment.rs  eval.rs  mod.rs  parser.rs  policy.rs  record.rs  report.rs  types.rs
src/spf/: eval.rs  lookup.rs  macro_exp.rs  macros.rs  mechanism.rs  mod.rs  parser.rs  record.rs  types.rs
tests/fixtures/: rsa2048.pem
