[package]
name = "email-auth"
version = "0.1.0"
edition = "2021"
description = "Email authentication library: SPF, DKIM, DMARC, ARC, BIMI"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "macros"] }

# DNS resolution
hickory-resolver = "0.25"

# Cryptography (RSA, Ed25519, SHA)
ring = "0.17"

# Base64 encoding/decoding
base64 = "0.22"

# Public Suffix List
psl = "2"

# Constant-time comparison
subtle = "2.6"

# Random (pct sampling)
rand = "0.9"

# X.509 certificate parsing (BIMI VMC)
x509-parser = { version = "0.16", features = ["verify"] }

# XML parsing (BIMI SVG validation)
quick-xml = "0.37"

# SHA-256 hashing (BIMI logo hash comparison)
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rcgen = "0.13"
